@@ -56,6 +56,8 @@ import static org.apache.hadoop.test.MetricsAsserts.assertCounter;
 import static org.apache.hadoop.test.MetricsAsserts.assertGauge;
 import static org.apache.hadoop.test.MetricsAsserts.assertQuantileGauges;
 import static org.apache.hadoop.test.MetricsAsserts.getMetrics;
+import static org.junit.Assert.assertTrue;
+
 
 /**
  * Test for metrics published by the Namenode
@@ -266,13 +268,17 @@ public class TestNameNodeMetrics {
   @Test
   public void testExcessBlocks() throws Exception {
     Path file = getTestPath("testExcessBlocks");
-    createFile(file, 100, (short) 2);
-    long totalBlocks = 1;
-    NameNodeAdapter.setReplication(namesystem, file.toString(), (short) 1);
-    updateMetrics();
+    createFile(file, 100, (short)2);
+    NameNodeAdapter.setReplication(namesystem, file.toString(), (short)1);
     MetricsRecordBuilder rb = getMetrics(NS_METRICS);
-    assertGauge("ExcessBlocks", totalBlocks, rb);
+    assertGauge("ExcessBlocks", 1L, rb);
+
+    // verify ExcessBlocks metric is decremented and
+    // excessReplicateMap is cleared after deleting a file
     fs.delete(file, true);
+    rb = getMetrics(NS_METRICS);
+    assertGauge("ExcessBlocks", 0L, rb);
+    assertTrue(bm.excessReplicateMap.isEmpty());
   }
   
   /**
@@ -409,6 +415,7 @@ public class TestNameNodeMetrics {
     Thread.sleep(5000);
     MetricsRecordBuilder rb = getMetrics(NN_METRICS);
     // Each datanode reports in when the cluster comes up
+    updateMetrics();
     assertCounter("BlockReportNumOps",
                   (long)DATANODE_COUNT * cluster.getStoragesPerDatanode(), rb);
     
